# ShakeNBreak

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BDM_parsing_script.sh  CHANGELOG.rst  CITATION.cff  CITATIONS.md  LICENSE  MANIFEST.in  README.md  ShakeNBreak_Developers_Notebook.ipynb  ShakeNBreak_Example_Workflow.ipynb  Test_Dimer.ipynb  paper.bib  paper.md  parse_SnB  parse_single_SnB  pyproject.toml  setup.py
.github/: dependabot.yml
BDM/: BDM.py  champion_defects_rerun.py  excluded_files_BDM_rsync.txt  plot_BDM.py
BDM_example_notebook/: BDM_metadata.json  Defect_Finding_Example.ipynb  V_Te_0_Distortion_Demo-Copy1.ipynb
Example_notebook/: Defect_Finding_Example.ipynb
SnB_input_files/: DefectSet.yaml  castep.param  cp2k_input.inp  example_generate_all_config.yaml  example_generate_config.yaml  incar.yaml  qe_input.yaml
data/: CdTe_Int_Cd_1_-60%_Distortion_Rattled_POSCAR  CdTe_Int_Cd_2_-60%_Distortion_Rattled_POSCAR  CdTe_V_Cd_-50%_Distortion_0.1_Rattled_POSCAR  CdTe_V_Cd_-50%_Distortion_Rattled_POSCAR  CdTe_V_Cd_-50%_Distortion_stdev0pt1_Rattled_POSCAR  CdTe_V_Cd_-50%_Kwarged_POSCAR  CdTe_defects_dict.pickle  CdTe_sub_1_In_on_Cd_1.txt  CdTe_vac_1_Cd_0_stdev_0.05.txt  CdTe_vac_1_Cd_0_stdev_0.15.txt  CdTe_vac_1_Cd_0_stdev_0.25.txt  CdTe_vac_1_Cd_0_stdev_0.25_no_unperturbed.txt  castep_mod.param  distortion_metadata.json  fake_V_Cd_-2_from_other_charge_states.txt  rTiO2_vac_2_O_0_nupdown_0.txt  vac_1_Cd_-2.txt
defect_finder/: BDM.py  __init__.py  analyse_defects.py  champion_defects_rerun.py  distortions.py  energy_lowering_distortions.py  incar.yml  plot_BDM.py
docs/: Analysis.rst  (+28 more)
(+450 files in other folders)
